--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
-pandas
-tqdm
-pydriller
-python_utils
+astunparse==1.6.3
+autopep8==1.7.0
+gitdb==4.0.9
+GitPython==3.1.28
+lizard==1.17.10
+numpy==1.21.6
+pandas==1.3.5
+pycodestyle==2.9.1
+PyDriller==2.1
+python-dateutil==2.8.2
+python-utils==3.3.3
+pytz==2022.4
+six==1.16.0
+smmap==5.0.0
+toml==0.10.2
+tqdm==4.64.1
+types-pytz==2022.4.0.0
+typing_extensions==4.4.0
