--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "python.analysis.exclude": [
+        "projects/",
+        "output/"
+    ]
 }
