wip: fix-try-block

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.analysis.exclude": [
         "projects/",
-        "output/"
+        "output/",
+        "miner_py_src/tests/"
     ]
 }
