fix nested try, add TBLD dataset stats

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "projects/",
         "output/",
         "miner_py_src/tests/"
-    ]
+    ],
+    "python.analysis.typeCheckingMode": "basic"
 }
