Adjusts in negative sample dataset

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,10 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["--mode", "preprocess"]
+            "args": [
+                "--mode",
+                "fetch"
+            ]
         }
     ]
 }
