implement tree-sitter lib
fix TokenError, UnicodeDecodeError

update info

fix FileStats

fix task1 generation and stats

remove get_code_slice

update info

fix count lines

fix multi except handlers

fix df catch column

update info

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@ __pycache__
 /target
 /projects
 /output
-
+/build
+/tree-sitter-python
 
 .idea
 *.iml
 .ipynb*
 *.log
 *env
+*.so
 
 except_file.py
