--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ six==1.16.0
 smmap==5.0.0
 toml==0.10.2
 tqdm==4.64.1
+tree-sitter==0.20.1
 types-pytz==2022.4.0.0
 typing_extensions==4.4.0
-requests==2.28.1
