--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,6 @@ types-pytz==2022.4.0.0
 typing_extensions==4.4.0
 termcolor==2.2.0
 sqlalchemy==1.4.45
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pandasql==0.7.3
 seaborn==0.12.2
