--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,34 @@
 astunparse==1.6.3
 autopep8==1.7.0
+contourpy==1.0.7
+cycler==0.11.0
+fonttools==4.39.2
 gitdb==4.0.9
 GitPython==3.1.28
+greenlet==2.0.2
+kiwisolver==1.4.4
 lizard==1.17.10
+matplotlib==3.7.1
 numpy==1.21.6
+packaging==23.0
 pandas==1.3.5
+pandasql==0.7.3
+Pillow==9.4.0
+psycopg2-binary==2.9.5
+pycg==0.0.6
 pycodestyle==2.9.1
 PyDriller==2.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-utils==3.3.3
 pytz==2022.4
+seaborn==0.12.2
 six==1.16.0
 smmap==5.0.0
+SQLAlchemy==1.4.45
+termcolor==2.2.0
 toml==0.10.2
 tqdm==4.64.1
 tree-sitter==0.20.1
 types-pytz==2022.4.0.0
 typing_extensions==4.4.0
-termcolor==2.2.0
-sqlalchemy==1.4.45
-psycopg2-binary==2.9.5
-pandasql==0.7.3
-seaborn==0.12.2
