--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ pandas==1.3.5
 pandasql==0.7.3
 Pillow==9.4.0
 psycopg2-binary==2.9.5
-pycg==0.0.6
+pycg @ git+https://github.com/AdaLogics/PyCG@507c89d6afef9048f1c20c5b02a3cbe614659dc9
 pycodestyle==2.9.1
 PyDriller==2.1
 pyparsing==3.0.9
