--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ GitPython==3.1.28
 greenlet==2.0.2
 iniconfig==2.0.0
 ipykernel==6.23.0
-ipython==8.13.2
 jedi==0.18.2
 jupyter_client==8.2.0
 jupyter_core==5.3.0
@@ -61,7 +60,7 @@ tomli==2.0.1
 tornado==6.3.1
 tqdm==4.64.1
 traitlets==5.9.0
-tree-sitter==0.20.1
+tree-sitter
 types-pytz==2022.4.0.0
 typing_extensions==4.4.0
 wcwidth==0.2.6
